# pyanalyze

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: doc.yml  lint.yml  publish.yml  test.yml
docs/: annotated_types.md  changelog.md  conf.py  configuration.md  design.md  faq.md  glossary.rst  implementation.md  index.rst  requirements.txt  type_evaluation.md  typesystem.md
docs/reference/: annotations.rst  ast_annotator.rst  extensions.rst  name_check_visitor.rst  runtime.rst  signature.rst  stacked_scopes.rst  value.rst
pyanalyze/: __init__.py  __main__.py  _disallowed_test.py  analysis_lib.py  annotated_types.py  annotations.py  arg_spec.py  ast_annotator.py  asynq_checker.py  attributes.py  boolability.py  checker.py  config.py  error_code.py  extensions.py  find_unused.py  format_strings.py  functions.py  implementation.py  importer.py  method_return_type.py  name_check_visitor.py  node_visitor.py  operations.py  options.py  patma.py  predicates.py  reexport.py  runtime.py  safe.py  shared_options.py  signature.py  stacked_scopes.py  stubwalk.py  suggested_type.py  test.toml  test_analysis_lib.py  test_annotated_types.py  test_annotations.py  test_arg_spec.py  (+55 more)
pyanalyze/stubs/: README
pyanalyze/stubs/_pyanalyze_tests-stubs/: aliases.pyi  args.pyi  callable.pyi  cdata.pyi  contextmanager.pyi  defaults.pyi  deprecated.pyi  evaluated.pyi  initnew.pyi  nested.pyi  overloaded.pyi  paramspec.pyi  posonly.pyi  recursion.pyi  self.pyi  tsself.pyi  typeddict.pyi  typevar.pyi
pyanalyze/stubs/pyanalyze-stubs/: extensions.pyi
