[tool.black]
target_version = ['py38']
include = '\.pyi?$'
skip-magic-trailing-comma = true
preview = true
exclude = '''
/(
    \.git
  | \.ipython
  | \.ipython64
  | \.mypy_cache
  | \.tox
  | \.venv
)/
'''

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyanalyze]
paths = ["pyanalyze"]
import_paths = ["."]
enforce_no_unused = true

possibly_undefined_name = true
use_fstrings = true
missing_return_annotation = true
missing_parameter_annotation = true
unused_variable = true
value_always_true = true
suggested_parameter_type = true
suggested_return_type = true
incompatible_override = true
missing_generic_parameters = true

[[tool.pyanalyze.overrides]]
module = "pyanalyze.typevar"
implicit_any = true

[[tool.pyanalyze.overrides]]
module = "pyanalyze.yield_checker"
implicit_any = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
  "F",
  "E",
  "I",  # import sorting
  "C4",  # flake8-comprehensions
  "B",  # bugbear
  "SIM",  # simplify
  "UP",  # pyupgrade
  "PIE810",  # startswith/endswith with a tuple
  "PERF101",  # unnecessary list() calls that can be replaced with literals
]

ignore = [
  "B008",  # do not perform function calls in argument defaults
]
